// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DarkThemeButton renders the moon icon 1`] = `
<body>
  <div>
    <button
      class="css-1sbf3pd"
      role="button"
    >
      <svg
        fill="none"
        height="28"
        viewBox="0 0 30 28"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 19.135C17.9067 19.135 20.2631 16.7786 20.2631 13.8718C20.2631 10.965 17.9067 8.60864 15 8.60864C12.0932 8.60864 9.73682 10.965 9.73682 13.8718C9.73682 16.7786 12.0932 19.135 15 19.135Z"
          fill="currentColor"
          id="main-circle"
          opacity="0"
          style="transform: scale(0); transform-origin: 0px 0px;"
          transform-origin="0px 0px"
        />
        <g
          opacity="0"
          style="transform: scale(0.8) rotate(-80deg); transform-origin: center center;"
          transform-origin="center center"
        >
          <path
            d="M6.57895 15.4508C7.45098 15.4508 8.15789 14.7439 8.15789 13.8718C8.15789 12.9998 7.45098 12.2929 6.57895 12.2929C5.70692 12.2929 5 12.9998 5 13.8718C5 14.7439 5.70692 15.4508 6.57895 15.4508Z"
            fill="currentColor"
            id="circle-1"
          />
          <path
            d="M10.7895 8.15789C11.6615 8.15789 12.3685 7.45098 12.3685 6.57895C12.3685 5.70692 11.6615 5 10.7895 5C9.91749 5 9.21057 5.70692 9.21057 6.57895C9.21057 7.45098 9.91749 8.15789 10.7895 8.15789Z"
            fill="currentColor"
            id="circle-2"
          />
          <path
            d="M19.2105 8.15789C20.0826 8.15789 20.7895 7.45098 20.7895 6.57895C20.7895 5.70692 20.0826 5 19.2105 5C18.3385 5 17.6316 5.70692 17.6316 6.57895C17.6316 7.45098 18.3385 8.15789 19.2105 8.15789Z"
            fill="currentColor"
            id="circle-3"
          />
          <path
            d="M23.4211 15.4508C24.2931 15.4508 25.0001 14.7439 25.0001 13.8718C25.0001 12.9998 24.2931 12.2929 23.4211 12.2929C22.5491 12.2929 21.8422 12.9998 21.8422 13.8718C21.8422 14.7439 22.5491 15.4508 23.4211 15.4508Z"
            fill="currentColor"
            id="circle-4"
          />
          <path
            d="M19.2105 22.7436C20.0826 22.7436 20.7895 22.0367 20.7895 21.1646C20.7895 20.2926 20.0826 19.5857 19.2105 19.5857C18.3385 19.5857 17.6316 20.2926 17.6316 21.1646C17.6316 22.0367 18.3385 22.7436 19.2105 22.7436Z"
            fill="currentColor"
            id="circle-5"
          />
          <path
            d="M10.7895 22.7436C11.6615 22.7436 12.3685 22.0367 12.3685 21.1646C12.3685 20.2926 11.6615 19.5857 10.7895 19.5857C9.91749 19.5857 9.21057 20.2926 9.21057 21.1646C9.21057 22.0367 9.91749 22.7436 10.7895 22.7436Z"
            fill="currentColor"
            id="circle-6"
          />
        </g>
      </svg>
    </button>
  </div>
</body>
`;

exports[`DarkThemeButton renders the sun icon 1`] = `
<body>
  <div>
    <button
      class="css-1sbf3pd"
      role="button"
    >
      <svg
        fill="none"
        height="28"
        opacity="0"
        style="transform: scale(0.8) rotate(-80deg); transform-origin: center center;"
        transform-origin="center center"
        viewBox="0 0 28 28"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.9676 15.8873C22.9105 15.7017 22.7816 15.5461 22.6096 15.4552C22.4376 15.3643 22.2371 15.3456 22.051 15.4032C19.3832 16.1366 16.5275 15.3803 14.5719 13.4233C12.6169 11.4664 11.8629 8.60971 12.5986 5.94282C12.6759 5.68461 12.6052 5.40485 12.4144 5.21412C12.2242 5.02386 11.9444 4.95357 11.6862 5.03089C7.43259 6.22164 4.63589 10.2803 5.03843 14.6792C5.4405 19.0781 8.92653 22.5623 13.3259 22.962C17.7248 23.3617 21.7821 20.5631 22.9705 16.3086C23.0108 16.1713 23.0098 16.0246 22.9676 15.8873Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</body>
`;
